[project]
name = "ai-agents-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "google-genai>=2.2.0",
    "groq>=1.2.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "tavily-python>=0.7.24",
]
